[package]

name = "baps3_cli"
version = "0.0.1"
authors = ["Matt Windsor <matt.windsor@ury.org.uk>"]

[dependencies]
rustc-serialize = "0.1.5"

[dependencies.baps3_protocol]
git = "https://github.com/UniversityRadioYork/baps3-protocol.rs.git"

[dependencies.docopt_macros]
git = "git://github.com/docopt/docopt.rs"
